trend table overflow fix

--- a/sass/util/_width.scss
+++ b/sass/util/_width.scss
@@ -1,3 +1,4 @@
 .mw8 { max-width: 8rem; }
 .mw20 { max-width: 20rem; }
 .mw30 { max-width: 30rem; }
+.mw-fill { max-width: 100%; }
